Добавлена информация о курсе Golang от Yalantis.

--- a/index.html
+++ b/index.html
@@ -95,6 +95,21 @@
                             <div class="card">
                                 <header class="card-header">
                                     <p class="card-header-title">
+                                        Yalantis Golang School
+                                    </p>
+                                </header>
+                                <div class="card-content">
+                                    <div class="content">
+                                        <p>Golang Course</p>
+                                    </div>
+                                </div>
+                                <footer class="card-footer">
+                                    <a href="https://res.cloudinary.com/dkuptsov/image/upload/v1595875918/Sertificates/photo_2020-07-27_21-49-24.jpg" class="card-footer-item" target="_blank">Certificate</a>
+                                </footer>
+                            </div>
+                            <div class="card">
+                                <header class="card-header">
+                                    <p class="card-header-title">
                                         Hillel IT School
                                     </p>
                                 </header>
