updated telegram contact and work experience info

--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
                                 <header class="card-header">
                                     <a href="https://netpeak.ua/about/" target="_blank">
                                         <p class="card-header-title">
+                                            Together Networks Limited
+                                        </p>
+                                    </a>
+                                </header>
+                                <footer class="card-footer">
+                                    <p class="card-footer-item">October 2020 - present</p>
+                                </footer>
+                            </div>
+                            <div class="card">
+                                <header class="card-header">
+                                    <a href="https://netpeak.ua/about/" target="_blank">
+                                        <p class="card-header-title">
                                             Netpeak
                                         </p>
                                     </a>
@@ -48,7 +60,7 @@
                                     </div>
                                 </div>
                                 <footer class="card-footer">
-                                    <p class="card-footer-item">March 2019 - present</p>
+                                    <p class="card-footer-item">March 2019 - October 2020</p>
                                 </footer>
                             </div>
                             <div class="card">
