Update work experience info

--- a/index.html
+++ b/index.html
@@ -26,12 +26,19 @@
                             <p class="title is-4">Experience</p>
                             <div class="card">
                                 <header class="card-header">
-                                    <a href="https://netpeak.ua/about/" target="_blank">
+                                    <a href="https://www.togethernetworks.com/" target="_blank">
                                         <p class="card-header-title">
                                             Together Networks Limited
                                         </p>
                                     </a>
                                 </header>
+                                <div class="card-content">
+                                    <div class="content">
+                                        <p>
+                                            <strong>Responsibility:</strong> design and development of new functionality for billing systems, support for existing functionality.
+                                        </p>
+                                    </div>
+                                </div>
                                 <footer class="card-footer">
                                     <p class="card-footer-item">October 2020 - present</p>
                                 </footer>
